--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <link rel="icon" href="assets/img/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/img/touch-image.png" />
   <title>Maximilian Kröll | Personal Website</title>
 </head>
 
