resized images for better performance

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="home__container c-grid">
         <div class="home__data">
           <div class="home__img">
-            <img src="assets/img/profile.jpg" alt="">
+            <img src="assets/img/profile.png" alt="">
           </div>
           <h1 class="home__title">Maximilian Kröll</h1>
           <span class="home__profession">Mobile App Developer</span>
@@ -62,7 +62,7 @@
         <div class="about__data">
           <p class="about__description">Hi, I'm a mobile app developer, passionate about creating and developing modern
             applications. I have experience in programming with Flutter, Xamarin and Nativ Android.</p>
-          <img src="assets/img/profile.jpg" alt="" class="about__img">
+          <img src="assets/img/profile.png" alt="" class="about__img">
         </div>
         <div>
           <div class="about__information">
