--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
           <h1 class="home__title">Maximilian Kröll</h1>
           <span class="home__profession">Mobile App Developer</span>
           <div class="home__social">
-            <a href="#" class="home__social-link"><i class="bx bxl-linkedin"></i></a>
-            <a href="#" class="home__social-link"><i class="bx bxl-github"></i></a>
+            <a href="https://www.linkedin.com/in/maximilian-kr%C3%B6ll-64324b1a1/" target="linkedin"
+              class="home__social-link"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://github.com/Maz47" target="github" class="home__social-link"><i
+                class="bx bxl-github"></i></a>
           </div>
           <a download="" href="" class="button home__button">Download Resume</a>
         </div>
@@ -221,14 +223,14 @@
         <div class="work__img">
           <img src="assets/img/work1.png" alt="">
           <div class="work__data">
-            <a href="#" class="work__link"><i class="bx bx-link-alt"></i></a>
+            <a href="https://github.com/Maz47" target="github" class="work__link"><i class="bx bx-link-alt"></i></a>
             <span class="work__title">Workout App</span>
           </div>
         </div>
         <div class="work__img">
           <img src="assets/img/work2.png" alt="">
           <div class="work__data">
-            <a href="#" class="work__link"><i class="bx bx-link-alt"></i></a>
+            <a href="https://github.com/Maz47" target="github" class="work__link"><i class="bx bx-link-alt"></i></a>
             <span class="work__title">Mealprep App</span>
           </div>
         </div>
@@ -280,11 +282,11 @@
         <h1 class="footer__title">Maximilian</h1>
         <p class="footer__description">I am Maximilian and this is my personal website.</p>
         <div class="footer__social">
-          <a href="#" class="footer__link"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="footer__link"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="footer__link"><i class="bx bxl-twitter"></i></a>
+          <!--<a href="#" class="footer__link"><i class="bx bxl-facebook"></i></a>-->
+          <a href="https://www.instagram.com/maz47dev/" target="instagram" class="footer__link"><i
+              class="bx bxl-instagram"></i></a>
+          <!--<a href="#" class="footer__link"><i class="bx bxl-twitter"></i></a>-->
         </div>
-
         <p class="footer__copy">All rights reserved by Maximilian - 2020</p>
       </div>
     </footer>
