dark mode added

--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
       </div>
       <div>
         <a href="#" class="nav__logo">Maximilian</a>
+        <span class="theme__switcher" id="theme-switcher">
+          <i class="bx bxs-sun"></i>
+        </span>
       </div>
       <div class="nav__menu" id="nav-menu">
         <div class="nav__close" id="nav-close">
           <i class="bx bx-x"></i>
+        </div>
+        <div class="theme__switcher__desktop" id="theme-switcher-desktop">
+          <i class="bx bxs-sun"></i>
         </div>
         <ul class="nav__list">
           <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
@@ -41,7 +47,6 @@
   </header>
 
   <main class="c-main">
-
     <section class="home section" id="home">
       <div class="home__container c-grid">
         <div class="home__data">
